--- a/relacion3/index.html
+++ b/relacion3/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Índice — Relación 3 (PHP)</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="shortcut icon" href="/playamar.png" type="image/x-icon">
     <style>body{padding:20px}</style>
 </head>
 <body>
