--- a/relacion1/index.html
+++ b/relacion1/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="utf-8">  
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Índice — Relación 1 (HTML)</title>
-    <link rel="shortcut icon" href="/playamar.png" type="image/x-icon">
+    <title>Índice — Relación 1 </title>
+    <link rel="shortcut icon" href="./playamar.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>body{padding:20px}</style>
 </head>
