--- a/relacion4/index.html
+++ b/relacion4/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="utf-8">  
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Índice — Relación 4 (PHP)</title>
+    <title>Índice — Relación 4 </title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="shortcut icon" href="/playamar.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./playamar.png" type="image/x-icon">
     <style>body{padding:20px}</style>
 </head>
 <body>
@@ -27,6 +27,9 @@
         <a href="ejercicio11.php" class="list-group-item list-group-item-action">Ejercicio 11</a>
         <a href="ejercicio12.php" class="list-group-item list-group-item-action">Ejercicio 12</a>
         <a href="ejercicio13.php" class="list-group-item list-group-item-action">Ejercicio 13</a>
+        <a href="ejercicio14/ejercicio14.php" class="list-group-item list-group-item-action">Ejercicio 14</a>
+        <a href="ejercicio16.php" class="list-group-item list-group-item-action">Ejercicio 16</a>
+        <a href="ejercicio17.php" class="list-group-item list-group-item-action">Ejercicio 17</a>
     </div>
     </div>
                         
